docs: add swagger for get, delete, and update user
